ajout des fichiers du projet complet

--- a/index.html
+++ b/index.html
@@ -3,9 +3,18 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Document</title>
+        <title>Night Shift at Paulie's</title>
+        <link rel="stylesheet" href="styles/styles.css">
     </head>
     <body>
-
+        <div class="intro">
+            <h1>Night Shift at Paulies</h1>
+            <p id="description">
+                <span id="Disclaimer">Pour une meilleure expérience, active le mode Plein Écran (F11).</span><br>
+                Clique sur <span id="motCle">les portes</span> pour commencer !
+            </p>
+            <a id="lienPorteEntree" href="entree.html"></a>
+        </div>
+        <script src="script.js" data-audio="Sound/Sound.mp3"></script>
     </body>
 </html>
